Fix warnings
Update deprecated methods, e.g.: new URL() to URI.create().toURL()
Remove deprecated SecurityManager
Remove unused or dead code